--- a/CV_Style.css
+++ b/CV_Style.css
@@ -91,3 +91,24 @@ div {
     min-width: 350px;
     max-width: 720px;
 }
+
+button {
+    padding: 5px;
+    border: 1px solid maroon;
+    border-radius: 2px;
+    text-decoration: none;
+    box-shadow: 0px 2px;
+    margin-bottom: 5px;
+  }
+  
+  button:hover {
+    cursor: pointer;
+  }
+  
+  button:active {
+    margin-top: 2px;
+    color: palegoldenrod;
+    background-color: maroon;
+    box-shadow: 0px 0px;
+  }
+  
