--- a/CV_Style.css
+++ b/CV_Style.css
@@ -8,18 +8,20 @@ h1 {
     margin: 0;
     border: 0;
     padding: 0;
+    color: palegoldenrod;
 }
 
 .header {
     margin: 0 0 30px 0;
     border: 0 0 30px 0;
-    padding: 0 0 30px 0;
+    padding: 0 0 0px 0;
 }
 
 .contact p{
     margin: 0;
     border: 0;
     padding: 0;
+    color: palegoldenrod;
 }
 
 .content {
@@ -38,7 +40,7 @@ img.Jess {
     position: relative;
     float: right;
     padding-left: 0;
-    border-bottom: 60px;
+    border-bottom: 10px;
 }
 
 li {
@@ -93,22 +95,22 @@ div {
 }
 
 button {
-    padding: 5px;
-    border: 1px solid maroon;
-    border-radius: 2px;
-    text-decoration: none;
-    box-shadow: 0px 2px;
-    margin-bottom: 5px;
+    padding: 3px 10px;
+    margin-bottom: 6px;
+    border: 1px solid;
+    color: palegoldenrod;
+    border-radius: 10px;
+    box-shadow: 0px 4px;
   }
   
   button:hover {
     cursor: pointer;
+    background-color: maroon;
   }
   
   button:active {
-    margin-top: 2px;
+    margin-top: 0px;
     color: palegoldenrod;
-    background-color: maroon;
     box-shadow: 0px 0px;
   }
   
