Added return to top text

--- a/CV_Style.css
+++ b/CV_Style.css
@@ -114,3 +114,8 @@ button {
     box-shadow: 0px 0px;
   }
   
+  .top {
+    float: right;
+    color: palegoldenrod;
+    padding: 15px 0px 50px 0px;
+  } 
